syntax = "proto3";

package lotterypb;

option go_package = "github.com/CharLottery/proto/lotterypb;lotterypb";

service LotteryService {
  rpc CreateLottery(CreateLotteryRequest) returns (CreateLotteryResponse);
  rpc GetLottery(GetLotteryRequest) returns (GetLotteryResponse);
  rpc ListLotteries(ListLotteriesRequest) returns (ListLotteriesResponse);
}

message Lottery {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string prize = 4;
  string status = 5;
  int64 available_tickets = 6;
}

message CreateLotteryRequest {
  string title = 1;
  string description = 2;
  string prize = 3;
  int64 available_tickets = 4;
}

message CreateLotteryResponse {
  Lottery lottery = 1;
}

message GetLotteryRequest {
  int64 id = 1;
}

message GetLotteryResponse {
  Lottery lottery = 1;
}

message ListLotteriesRequest {}

message ListLotteriesResponse {
  repeated Lottery lotteries = 1;
}
